Add info to colles. Add info on admin field
